hard-gists/2192812/run.log
=== Docker Run Log for 2192812 ===
Started at: Mi 29. Okt 13:00:24 CET 2025

[2025-10-29 13:00:24] START: Running container for 2192812
[2025-10-29 13:00:25] SUCCESS: Container aec9191ab12dcd29d37d54840a9edf74a3151ca4bd48f9c2f548108d0b6230e1 started for 2192812
=== Container logs for 2192812 ===
  File "/snippet.py", line 51
    print output
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2192812 ===
[2025-10-29 13:00:27] INFO: Container aec9191ab12dcd29d37d54840a9edf74a3151ca4bd48f9c2f548108d0b6230e1 has stopped
